php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #65378 radius.c:706: error: too many arguments to function ‘rad_salt_value’
Submitted: 2013-08-02 08:57 UTC Modified: 2016-02-15 14:34 UTC
Votes:3
Avg. Score:4.0 ± 0.8
Reproduced:3 of 3 (100.0%)
Same Version:2 (66.7%)
Same OS:1 (33.3%)
From: v dot litvin at amsterdamtelecom dot ru Assigned: aharvey (profile)
Status: Closed Package: radius (PECL)
PHP Version: Irrelevant OS: Debian Wheezy
Private report: No CVE-ID: None
 [2013-08-02 08:57 UTC] v dot litvin at amsterdamtelecom dot ru
Description:
------------
PHP version seems to be unrelated. Tested with 5.5.1 and 5.4.4.
No changes to php.ini was made.

PHP configure line:
./configure --with-layout=GNU --enable-libxml --with-regex=php --with-zend-
vm=CALL --enable-dom --with-pdo-mysql --enable-bcmath --with-
apxs2=/usr/local/apache2/bin/apxs --with-openssl --with-gd --with-xsl --with-
mysql --with-mcrypt --with-jpeg-dir=/usr/lib --with-curl --enable-soap --with-
zlib --enable-mbstring --with-mysqli --with-snmp --enable-ftp --with-imap --
with-imap-ssl --with-kerberos --with-pear=/usr/local/share/pear --enable-pcntl -
-enable-sockets --enable-gd-native-ttf --with-freetype-dir=/lib64 --with-
freetype

Radius fails to compile with error:
/home/vlitvin/radius-git/php-radius/radius.c: In function 
‘zif_radius_salt_encrypt_attr’:
/home/vlitvin/radius-git/php-radius/radius.c:706: error: too many arguments to 
function ‘rad_salt_value’



Test script:
---------------
git clone https://github.com/LawnGnome/php-radius.git
cd php-radius/
phpize
./configure
make

Expected result:
----------------
Build complete.

Actual result:
--------------
cc -I. -I/home/vlitvin/radius-git/php-radius -DPHP_ATOM_INC -
I/home/vlitvin/radius-git/php-radius/include -I/home/vlitvin/radius-git/php-
radius/main -I/home/vlitvin/radius-git/php-radius -I/usr/local/include/php -
I/usr/local/include/php/main -I/usr/local/include/php/TSRM -
I/usr/local/include/php/Zend -I/usr/local/include/php/ext -
I/usr/local/include/php/ext/date/lib -DHAVE_CONFIG_H -g -O2 -c 
/home/vlitvin/radius-git/php-radius/radius.c  -fPIC -DPIC -o .libs/radius.o
/home/vlitvin/radius-git/php-radius/radius.c: In function 
‘zif_radius_salt_encrypt_attr’:
/home/vlitvin/radius-git/php-radius/radius.c:706: error: too many arguments to 
function ‘rad_salt_value’

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-07-18 12:45 UTC] cmb@php.net
Apparently, a function declared without TSRMLS_D is called with
TSRMLS_CC[1], which adds a 5th argument for ZTS mode. The issue
seems to have been introduced with commit 976408f[2].

[1] <https://github.com/LawnGnome/php-radius/blob/b674356513dd135317bb876486beff209e1c5a9a/radius.c#L706>
[2] <https://github.com/LawnGnome/php-radius/commit/976408feb059efce094194b34b84aef1d5c4e088>
 [2016-02-15 14:34 UTC] aharvey@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: aharvey
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 13:00:02 2026 UTC