Fix ZTS build.

Fixes bug #65378 (radius.c:706: error: too many arguments to function
‘rad_salt_value’).